--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,18 @@ a:visited, a:link{
     color: inherit;   
 }
 
+.buttonon{
+    background-color: #023E73;
+    color:#FDFDFD;
+    border: 2px solid #023E73;
+    border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
 
 
+/*Start of grids for pages */
 .home {
     grid-area: main;
     padding: 16px;
@@ -133,6 +143,7 @@ a:visited, a:link{
     padding-right: 32px;
     grid-gap: 16px;
     background-color: #D9D9D9;
+    
     display: grid;
     grid-template-columns: 50% 50%; /* 2 */
     grid-template-rows: 72px auto auto; /* 3 */
@@ -142,20 +153,57 @@ a:visited, a:link{
         "section4 section4";        
 }
 
+
+
 .list{
     margin-bottom: 16px;
-    background-color: deeppink;
+    background-color: #FDFDFD;
+    border: 2px solid #023E73;
+    border-radius: 16px;
     display: grid;
-    grid-template-columns: auto; /* 2 */
-    grid-template-rows: 50% 20% 40%; /* 2 */
+    grid-template-columns: 50% 50%; /* 2 */
+    grid-template-rows: auto 72px auto 69px; 
     grid-template-areas:
-        "img1"
-        "title1"
-        "desc1";   
-
-        justify-content: center;
-        align-items: flex-start;
+        "img1 img1"
+        "title1 title1"
+        "desc1 desc1"
+        "custom1 cart1";   
 }
+
+.list img{
+    width: 300px;
+}
+
+
+
+.list div:nth-of-type(1){
+    grid-area: img1;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin: 0px;
+    padding: 0px;
+}
+
+.list div:nth-of-type(2){
+    grid-area: title1;
+
+
+}
+
+.list div:nth-of-type(3){
+    grid-area: desc1;
+
+}
+
+.list div:nth-of-type(4){
+    grid-area: custom1;
+}
+
+.list div:nth-of-type(5){
+    grid-area: cart1;
+}
+
 
 .edit{
     padding: 16px;
@@ -201,21 +249,18 @@ a:visited, a:link{
     padding-left: 8px;
     margin:0px;
     font-size: 12px;
-    text-decoration: none;
 }
 
 .cartlist h2{
     font-size: 20px;
     text-align: center;
     color: #023E73;
-    text-decoration: none;
 }
 
 .cartlist h3{
     margin:0px;
     font-size: 16px;
     padding-left: 8px;
-    text-decoration: none;
 }
 
 .cartlist div:nth-of-type(1){
@@ -641,20 +686,6 @@ h1{
             "space1 section3 section4 space2";       
     }
     
-    .list{
-        margin-bottom: 16px;
-        background-color: deeppink;
-        display: grid;
-        grid-template-columns: auto; /* 2 */
-        grid-template-rows: 50% 20% 40%; /* 2 */
-        grid-template-areas:
-            "img1"
-            "title1"
-            "desc1";   
-    
-            justify-content: center;
-            align-items: flex-start;
-    }
 
     .edit{
         margin: 0px;
